\name{NEWS}
\title{News for \R Package \pkg{kit}}
\encoding{UTF-8}

\newcommand{\CRANpkg}{\href{https://CRAN.R-project.org/package=#1}{\pkg{#1}}}

\section{version 0.0.15 (2023-10-01)}{
  \subsection{Notes}{
    \itemize{
     \item Correct typo in configure file
    }
  }
}

\section{version 0.0.14 (2023-08-12)}{
  \subsection{Notes}{
    \itemize{
     \item Update configure file to extend support for GCC

     \item Correct warnings in NEWS.Rd (strong)

     \item Correct typo in funique.Rd thanks to @davidbudzynski
    }
  }
}

\section{version 0.0.13 (2023-02-24)}{
  \subsection{Notes}{
    \itemize{
     \item Function \code{pprod} now returns double output even if inputs are integer - in line with \code{base::prod} - to avoid integer overflows.

     \item Update configure file
    }
  }
}

\section{version 0.0.12 (2022-10-26)}{
  \subsection{New Features}{
    \itemize{
      \item Function \code{pcountNA} is equivalent to \code{pcount(..., value = NA)}.
      
      \item Function \code{pcountNA} and \code{pcount(..., value = NA)} allow \code{NA} counting with mixed data type (including \code{data.frame}). \code{pcountNA} also supports list-vectors as inputs and counts empty or \code{NULL} elements as \code{NA}.
      
      \item Functions \code{panyv}, \code{panyNA}, \code{pallv} and \code{pallNA} are added as efficient wrappers around \code{pcount} and \code{pcountNA}. They are parallel equivalents of scalar functions \code{base::anyNA} and \code{anyv}, \code{allv} and \code{allNA} in the 'collapse' R package.
      
      \item Functions \code{pfirst} and \code{plast} are added to efficiently obtain the row-wise first and last non-missing value or non-empty element of lists. They are parallel equivalents to the (column-wise) \code{ffirst} and \code{flast} functions in the 'collapse' R package. Implemented by @SebKrantz.
      
      \item Functions \code{psum/pprod/pmean} also support logical vectors as input. Implemented by @SebKrantz.
    }
  }